# masterbot

./: CMakeLists.txt  LICENSE  README.md  build.sh
config/: user_config.json  user_config_template.json
include/: AIService.h  ClaudeService.h  ConfigManager.h  Event.h  OpenAIService.h  Preferences.h  RecommendationEngine.h  Schedule.h  User.h
src/: AIService.cpp  ClaudeService.cpp  ConfigManager.cpp  Event.cpp  OpenAIService.cpp  Preferences.cpp  RecommendationEngine.cpp  Schedule.cpp  User.cpp  main.cpp
tests/: CMakeLists.txt
